--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server src/index.js"
+    "start": "webpack-dev-server src/index.js --mode development",
+    "prod": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "redux-devtools-extension": "^2.13.8",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.0.0",
+    "@material-ui/core": "^4.6.0",
     "lodash.debounce": "^4.0.8",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-select": "^2.4.3",
-    "react-spring": "^8.0.20",
-    "redux": "^4.0.1",
-    "styled-components": "^4.2.0"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "react-select": "^2.4.4",
+    "react-spring": "^8.0.27",
+    "redux": "^4.0.4",
+    "styled-components": "^4.4.1"
   }
 }
